--- a/login.html
+++ b/login.html
@@ -31,14 +31,14 @@
         <div class="tab">
           <button
             class="tablinks"
-            onclick="openLogin(event, 'KV')"
+            onclick="openLogin(event, 'HS')"
             id="kodevoucher"
           >
             Voucher
           </button>
           <button
             class="tablinks"
-            onclick="openLogin(event, 'UP')"
+            onclick="openLogin(event, 'HSM')"
             id="userpass"
           >
             Member
@@ -53,9 +53,9 @@
         </div>
 
         <!-- Login 1 kolom-->
-        <div id="KV" class="tabcontent">
+        <div id="HS" class="tabcontent">
           $(if chap-id)
-          <form name="sendinkv" action="$(link-login-only)" method="post">
+          <form name="sendinhs" action="$(link-login-only)" method="post">
             <input type="hidden" name="username" />
             <input type="hidden" name="password" />
             <input type="hidden" name="dst" value="$(link-orig)" />
@@ -63,15 +63,63 @@
           </form>
           <script type="text/javascript" src="/md5.js"></script>
           <script type="text/javascript">
-            function doLoginkv() {
-              document.sendinkv.username.value =
-                document.loginkv.usernamekv.value;
-              document.sendinkv.password.value = hexMD5(
+            function doLoginhs() {
+              document.sendinhs.username.value =
+                document.loginhs.usernamehs.value;
+              document.sendinhs.password.value = hexMD5(
                 "$(chap-id)" +
-                  document.loginkv.passwordkv.value +
+                  document.loginhs.passwordhs.value +
                   "$(chap-challenge)"
               );
-              document.sendinkv.submit();
+              document.sendinhs.submit();
+              return false;
+            }
+            async function doReset() {
+              console.log("Do Reset");
+              const username = document.loginhs.usernamehs.value.trim();
+              const messageEl = document.getElementById("resetMessage");
+
+              messageEl.textContent = "";
+              messageEl.style.color = "";
+
+              if (!username) {
+                messageEl.textContent = "Silakan isi username terlebih dahulu.";
+                messageEl.style.color = "red";
+                return false;
+              }
+
+              try {
+                const response = await fetch(
+                  "https://demo.msradius.com/api/optimizeusername?unique=" +
+                    encodeURIComponent(username),
+                  {
+                    method: "GET",
+                    headers: {
+                      "Content-Type": "application/json",
+                    },
+                  }
+                );
+
+                if (response.ok) {
+                  const result = await response.json();
+                  if (result.code == 200) {
+                    messageEl.textContent =
+                      "Optimize successful! Please try login again.";
+                    messageEl.style.color = "green";
+                  } else {
+                    messageEl.textContent = "Failed to optimize.";
+                    messageEl.style.color = "red";
+                  }
+                } else {
+                  messageEl.textContent = "Failed to optimize.";
+                  messageEl.style.color = "red";
+                }
+              } catch (error) {
+                console.error("Error:", error);
+                messageEl.textContent = "An error occurred. Please try again.";
+                messageEl.style.color = "red";
+              }
+
               return false;
             }
           </script>
@@ -88,19 +136,19 @@
               </div>
               <form
                 autocomplete="off"
-                name="loginkv"
+                name="loginhs"
                 action="$(link-login-only)"
                 method="post"
                 $(if
                 chap-id)
-                onSubmit="return doLoginkv()"
+                onSubmit="return doLoginhs()"
                 $(endif)
               >
                 <input type="hidden" name="dst" value="$(link-orig)" />
                 <input type="hidden" name="popup" value="true" />
                 <input
                   id="user"
-                  name="usernamekv"
+                  name="usernamehs"
                   type="text"
                   placeholder="Voucher"
                   onchange="updateInput(this.value)"
@@ -108,11 +156,36 @@
                 />
                 <input
                   id="pass"
-                  name="passwordkv"
+                  name="passwordhs"
                   placeholder="Password"
                   type="hidden"
                 />
-                <input type="submit" class="buttona" value=" Login " />
+                <div
+                  style="
+                    display: flex;
+                    justify-content: center;
+                    gap: 5px;
+                    margin-top: 20px;
+                  "
+                >
+                  <button type="submit" class="buttona">Login</button>
+                  <button
+                    type="button"
+                    class="buttona"
+                    onclick="return doReset()"
+                  >
+                    Reset
+                  </button>
+                </div>
+
+                <div
+                  id="resetMessage"
+                  style="
+                    margin-top: 10px;
+                    font-weight: bold;
+                    text-align: center;
+                  "
+                ></div>
               </form>
             </center>
             <script type="text/javascript">
@@ -124,7 +197,7 @@
         </div>
 
         <!-- Login 2 kolom -->
-        <div id="UP" class="tabcontent">
+        <div id="HSM" class="tabcontent">
           $(if chap-id)
           <form name="sendinup" action="$(link-login-only)" method="post">
             <input type="hidden" name="username" />
@@ -143,6 +216,54 @@
                   "$(chap-challenge)"
               );
               document.sendinup.submit();
+              return false;
+            }
+            async function doResetMember() {
+              console.log("Do Reset");
+              const username = document.loginup.usernameup.value.trim();
+              const messageEl = document.getElementById("resetMessageUp");
+
+              messageEl.textContent = "";
+              messageEl.style.color = "";
+
+              if (!username) {
+                messageEl.textContent = "Silakan isi username terlebih dahulu.";
+                messageEl.style.color = "red";
+                return false;
+              }
+
+              try {
+                const response = await fetch(
+                  "https://demo.msradius.com/api/optimizeusername?unique=" +
+                    encodeURIComponent(username),
+                  {
+                    method: "GET",
+                    headers: {
+                      "Content-Type": "application/json",
+                    },
+                  }
+                );
+
+                if (response.ok) {
+                  const result = await response.json();
+                  if (result.code == 200) {
+                    messageEl.textContent =
+                      "Optimize successful! Please try login again.";
+                    messageEl.style.color = "green";
+                  } else {
+                    messageEl.textContent = "Failed to optimize.";
+                    messageEl.style.color = "red";
+                  }
+                } else {
+                  messageEl.textContent = "Failed to optimize.";
+                  messageEl.style.color = "red";
+                }
+              } catch (error) {
+                console.error("Error:", error);
+                messageEl.textContent = "An error occurred. Please try again.";
+                messageEl.style.color = "red";
+              }
+
               return false;
             }
           </script>
@@ -180,12 +301,37 @@
                   type="password"
                   placeholder="Password"
                 />
-                <input type="submit" class="buttona" value=" Login " />
+
+                <div
+                  style="
+                    display: flex;
+                    justify-content: center;
+                    gap: 5px;
+                    margin-top: 20px;
+                  "
+                >
+                  <button type="submit" class="buttona">Login</button>
+                  <button
+                    type="button"
+                    class="buttona"
+                    onclick="return doResetMember()"
+                  >
+                    Reset
+                  </button>
+                </div>
+
+                <div
+                  id="resetMessageUp"
+                  style="
+                    margin-top: 10px;
+                    font-weight: bold;
+                    text-align: center;
+                  "
+                ></div>
               </form>
             </center>
           </div>
         </div>
-        <!-- Form Daftar Member -->
         <!-- Form Daftar Member -->
         <div id="REGIS" class="tabcontent">
           <script>
@@ -343,7 +489,7 @@
 
       <div class="middle">
         <!-- LIST EVOUCHER START -->
-        <p class="info">Buy Evoucher</p>
+        <p class="info">Beli Evoucher</p>
         <div id="evoucher-list" class="evoucher-list"></div>
 
         <script>
