--- a/login.html
+++ b/login.html
@@ -20,14 +20,15 @@
       <!-- .notif-->
 
       <div class="left">
-        <center>
+        <div style="display: flex; flex-direction: column; align-items: center">
           <img
             src="img/logo.png"
             alt="MS Radius"
-            style="border-radius: 5px; width: 200px; height: auto"
-          /><br />
-        </center>
-        <h3></h3>
+            style="border-radius: 5px; width: 200px"
+          />
+          <p style="text-align: center">Selamat datang di MSRadius Hotspot</p>
+        </div>
+
         <div class="tab">
           <button
             class="tablinks"
@@ -45,10 +46,10 @@
           </button>
           <button
             class="tablinks"
-            onclick="openLogin(event, 'REGIS')"
+            onclick="openLogin(event, 'RG-BILLING')"
             id="daftarmember"
           >
-            Daftar Member
+            Daftar Billing
           </button>
         </div>
 
@@ -332,21 +333,31 @@
             </center>
           </div>
         </div>
-        <!-- Form Daftar Member -->
-        <div id="REGIS" class="tabcontent">
+        <!-- Form Daftar Billing -->
+
+        <div id="RG-BILLING" class="tabcontent">
           <script>
-            async function doRegisterMember(event) {
+            async function doRegisterBilling(event) {
               event.preventDefault();
 
               // Ambil semua nilai dari form
-              const nama = document.getElementById("name").value.trim();
-              const phone = document.getElementById("phone").value.trim();
-              const whatsapp = document.getElementById("whatsapp").value.trim();
-              const email = document.getElementById("email").value.trim();
-              const alamat = document.getElementById("address").value.trim();
-              const note = document.getElementById("note").value.trim();
-              const profile_id =
-                document.getElementById("evoucher-dropdown").value;
+              const nama = document.getElementById("name_billing").value.trim();
+              const phone = document
+                .getElementById("phone_billing")
+                .value.trim();
+              const whatsapp = document
+                .getElementById("whatsapp_billing")
+                .value.trim();
+              const email = document
+                .getElementById("email_billing")
+                .value.trim();
+              const alamat = document
+                .getElementById("address_billing")
+                .value.trim();
+              const note = document.getElementById("note_billing").value.trim();
+              const profile_id = document.getElementById(
+                "packet_billing_dropdown"
+              ).value;
 
               // Validasi
               if (
@@ -363,7 +374,7 @@
 
               try {
                 const response = await fetch(
-                  "https://demo.msradius.com/api/daftar-member",
+                  "https://demo.msradius.com/api/daftar-billing",
                   {
                     method: "POST",
                     headers: {
@@ -447,81 +458,134 @@
               }
             }
           </script>
-          <form
-            name="registerMember"
-            onsubmit="return doRegisterMember(event)"
-            style="max-width: 100%; margin-top: 10px"
-          >
-            <div style="margin-bottom: 10px">
-              <label for="name" style="display: block; margin-bottom: 5px"
-                >Nama Lengkap</label
-              >
-              <input id="name" name="name" type="text" required />
-            </div>
-
-            <div style="margin-bottom: 10px">
-              <label for="phone" style="display: block; margin-bottom: 5px"
-                >Nomor HP</label
-              >
-              <input id="phone" name="phone" type="text" required />
-            </div>
-
-            <div style="margin-bottom: 10px">
-              <label for="whatsapp" style="display: block; margin-bottom: 5px"
-                >Nomor Whatsapp</label
-              >
-              <input id="whatsapp" name="whatsapp" type="text" required />
-            </div>
-
-            <div style="margin-bottom: 10px">
-              <label for="email" style="display: block; margin-bottom: 5px"
-                >Email</label
-              >
-              <input id="email" name="email" type="text" required />
-            </div>
-
-            <div style="margin-bottom: 10px">
-              <label for="alamat" style="display: block; margin-bottom: 5px"
-                >Alamat Lengkap</label
-              >
-              <textarea
-                id="address"
-                name="address"
-                rows="3"
-                required
-                style="height: auto; resize: none"
-              ></textarea>
-            </div>
-
-            <div style="margin-bottom: 10px">
-              <label for="notes" style="display: block; margin-bottom: 5px"
-                >Notes</label
-              >
-              <textarea
-                id="note"
-                name="note"
-                rows="2"
-                required
-                style="height: auto; resize: none"
-              ></textarea>
-            </div>
-
-            <div style="margin-bottom: 10px">
-              <label for="notes" style="display: block; margin-bottom: 5px"
-                >Paket</label
-              >
-              <select id="evoucher-dropdown">
-                <option value="">Pilih Paket eVoucher</option>
-              </select>
-            </div>
-
-            <input
-              type="submit"
-              class="buttona"
-              value="Daftar Sekarang"
+          <div class="form-wrapper" style="width: 100%; margin-top: 10px">
+            <form
+              name="registerMember"
+              onsubmit="return doRegisterBilling(event)"
               style="width: 100%"
-            />
-          </form>
+            >
+              <div style="margin-bottom: 10px">
+                <label
+                  for="name_billing"
+                  style="display: block; margin-bottom: 5px"
+                >
+                  Nama Lengkap
+                </label>
+                <input
+                  id="name_billing"
+                  name="name_billing"
+                  type="text"
+                  required
+                  class="full-width-input"
+                />
+              </div>
+              <div style="margin-bottom: 10px">
+                <label
+                  for="phone_billing"
+                  style="display: block; margin-bottom: 5px"
+                  >Nomor HP</label
+                >
+                <input
+                  id="phone_billing"
+                  name="phone_billing"
+                  type="text"
+                  required
+                  class="full-width-input"
+                />
+              </div>
+
+              <div style="margin-bottom: 10px">
+                <label
+                  for="whatsapp_billing"
+                  style="display: block; margin-bottom: 5px"
+                  >Nomor Whatsapp</label
+                >
+                <input
+                  id="whatsapp_billing"
+                  name="whatsapp_billing"
+                  type="text"
+                  required
+                  class="full-width-input"
+                />
+              </div>
+
+              <div style="margin-bottom: 10px">
+                <label
+                  for="email_billing"
+                  style="display: block; margin-bottom: 5px"
+                  >Email</label
+                >
+                <input
+                  id="email_billing"
+                  name="email_billing"
+                  type="text"
+                  required
+                  class="full-width-input"
+                />
+              </div>
+
+              <div style="margin-bottom: 10px">
+                <label
+                  for="address_billing"
+                  style="display: block; margin-bottom: 5px"
+                  >Alamat Lengkap</label
+                >
+                <textarea
+                  id="address_billing"
+                  name="address_billing"
+                  rows="3"
+                  required
+                  style="
+                    height: auto;
+                    resize: none;
+                    width: 100%;
+                    box-sizing: border-box;
+                  "
+                ></textarea>
+              </div>
+
+              <div style="margin-bottom: 10px">
+                <label
+                  for="note_billing"
+                  style="display: block; margin-bottom: 5px"
+                  >Notes</label
+                >
+                <textarea
+                  id="note_billing"
+                  name="note_billing"
+                  rows="2"
+                  required
+                  style="
+                    height: auto;
+                    resize: none;
+                    width: 100%;
+                    box-sizing: border-box;
+                  "
+                ></textarea>
+              </div>
+
+              <div style="margin-bottom: 10px">
+                <label
+                  for="packet_billing_dropdown"
+                  style="display: block; margin-bottom: 5px"
+                  >Paket</label
+                >
+                <select
+                  id="packet_billing_dropdown"
+                  style="height: 35px; width: 100%; box-sizing: border-box"
+                >
+                  <option value="">Pilih Paket eVoucher</option>
+                </select>
+              </div>
+
+              <input
+                type="submit"
+                class="buttona"
+                value="Daftar Sekarang"
+                style="width: 100%"
+              />
+            </form>
+          </div>
         </div>
 
         <div id="cekuser" class="modal-window">
@@ -577,7 +641,7 @@
 
       <div class="middle">
         <!-- LIST EVOUCHER START -->
-        <p class="info">Beli Evoucher</p>
+        <p class="info">Beli EVoucher</p>
         <div id="evoucher-list" class="evoucher-list"></div>
 
         <script>
@@ -645,11 +709,195 @@
           window.addEventListener("load", function () {
             loadProfiles();
             loadEvouchers();
+            loadProfilesHSM();
           });
         </script>
         <!-- LIST EVOUCHER END -->
       </div>
 
+      <div id="REGIS-MEMBER" class="middle">
+        <script>
+          async function doRegisterMember(event) {
+            event.preventDefault();
+
+            // Ambil semua nilai dari form
+            const nama = document.getElementById("name_member").value.trim();
+            const whatsapp = document
+              .getElementById("whatsapp_member")
+              .value.trim();
+            const alamat = document
+              .getElementById("address_member")
+              .value.trim();
+            const profile_id = document.getElementById(
+              "packet_hsm_dropdown"
+            ).value;
+
+            // Validasi
+            if (!nama || !whatsapp || !alamat || !profile_id) {
+              alert("Harap isi semua field dan pilih paket Hotspot Member!");
+              return false;
+            }
+
+            try {
+              const response = await fetch(
+                "https://demo.msradius.com/api/daftar-member",
+                {
+                  method: "POST",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({
+                    nama,
+                    whatsapp,
+                    alamat,
+                    profile_id, // kirim hanya ID-nya
+                  }),
+                }
+              );
+
+              const result = await response.json();
+
+              if (response.ok) {
+                alert("Pendaftaran berhasil! Silakan login.");
+                document.forms["registerMember"].reset();
+                document.getElementById("userpass").click(); // arahkan ke login
+              } else {
+                alert(
+                  "Gagal daftar: " + (result.message || "Terjadi kesalahan")
+                );
+              }
+            } catch (error) {
+              console.error("Error:", error);
+              alert("Terjadi kesalahan saat mengirim data.");
+            }
+
+            // Debug (optional)
+            console.log("Data member yang dikirim:");
+            console.log({
+              nama,
+              whatsapp,
+              alamat,
+              profile_id,
+            });
+
+            return false;
+          }
+          async function loadProfilesHSM() {
+            try {
+              const response = await fetch(
+                "https://demo.msradius.com/api/evoucher"
+              );
+              if (response.ok) {
+                const res = await response.json();
+                const dropdown = document.getElementById("packet_hsm_dropdown");
+                let options = '<option value="">Pilih Paket Member</option>';
+
+                res.data.forEach((element) => {
+                  options += `<option value="${element.id}">Paket ${
+                    element.profile_name
+                  } - Rp. ${element.price_sell.toLocaleString()}</option>`;
+                });
+
+                dropdown.innerHTML = options;
+
+                // Optional: Tambahkan event listener jika perlu
+                dropdown.addEventListener("change", function () {
+                  const selectedId = this.value;
+                  console.log("Selected eVoucher ID:", selectedId);
+                  // Bisa tambahkan aksi lanjut di sini
+                });
+              } else {
+                console.error(
+                  "Gagal fetch e-voucher untuk dropdown:",
+                  response.status
+                );
+              }
+            } catch (error) {
+              console.error("Error fetching profiles for dropdown:", error);
+            }
+          }
+        </script>
+        <p class="info">Daftar Member</p>
+        <div class="form-wrapper" style="width: 100%; margin-top: 10px">
+          <form
+            name="formRegisterMember"
+            onsubmit="return doRegisterMember(event)"
+            style="width: 100%"
+          >
+            <div style="margin-bottom: 10px">
+              <label
+                for="name_member"
+                style="display: block; margin-bottom: 5px"
+              >
+                Nama Lengkap
+              </label>
+              <input
+                id="name_member"
+                name="name_member"
+                type="text"
+                required
+                class="full-width-input"
+              />
+            </div>
+
+            <div style="margin-bottom: 10px">
+              <label
+                for="whatsapp_member"
+                style="display: block; margin-bottom: 5px"
+                >Whatsapp</label
+              >
+              <input
+                id="whatsapp_member"
+                name="whatsapp_member"
+                type="text"
+                required
+                class="full-width-input"
+              />
+            </div>
+
+            <div style="margin-bottom: 10px">
+              <label
+                for="address_member"
+                style="display: block; margin-bottom: 5px"
+                >Alamat</label
+              >
+              <textarea
+                id="address_member"
+                name="address_member"
+                rows="3"
+                required
+                style="
+                  height: auto;
+                  resize: none;
+                  width: 100%;
+                  box-sizing: border-box;
+                "
+              ></textarea>
+            </div>
+
+            <div style="margin-bottom: 10px">
+              <label
+                for="packet_hsm_dropdown"
+                style="display: block; margin-bottom: 5px"
+                >Paket</label
+              >
+              <select
+                id="packet_hsm_dropdown"
+                style="height: 35px; width: 100%; box-sizing: border-box"
+              >
+                <option value="">Pilih Paket Member</option>
+              </select>
+            </div>
+
+            <input
+              type="submit"
+              class="buttona"
+              value="Daftar Sekarang"
+              style="width: 100%"
+            />
+          </form>
+        </div>
+      </div>
       <!-- .middle -->
 
       <div class="right">
@@ -658,7 +906,7 @@
         <h3 id="title3"></h3>
         <p id="alamat"></p>
         <h3 id="title4"></h3>
-        <p id="phone"></p>
+        <p id="phone-off"></p>
       </div>
       <script>
         var mydata = JSON.parse(data);
@@ -668,13 +916,13 @@
         document.getElementById("title3").innerHTML = mydatat[2].title3;
         document.getElementById("title4").innerHTML = mydatat[3].title4;
         document.getElementById("alamat").innerHTML = mydata[1].alamat;
-        document.getElementById("phone").innerHTML = mydata[2].phone;
+        document.getElementById("phone-off").innerHTML = mydata[2].phone;
         document.getElementById("keterangan").innerHTML = mydata[3].keterangan;
       </script>
 
       <div class="footer">
         <i>Copyright &copy; <i id="copyright"></i></i><br />
-        <i>Powered by <a href="https://laksa19.github.io">Mikhmon</a></i>
+        <i>Powered by <a href="https://laksa19.github.io">MSRadius</a></i>
         <!-- Tolong jangan dihilangkan bagian ini-->
       </div>
     </div>
