--- a/status.html
+++ b/status.html
@@ -104,7 +104,7 @@ $(endif)
         var mydata = JSON.parse(data);
         document.getElementById('title').innerHTML =  mydata[0].nama ;
         document.getElementById('cek').innerHTML =  mydata[5].masaaktif ;
-        document.getElementById('notifikasi').innerHTML =  mydata[7].notifikasi ;
+        //document.getElementById('notifikasi').innerHTML =  mydata[7].notifikasi ;
         //get vaidity
         var usr = document.getElementById('user').innerHTML
         var url = "https://example.com/status/status.php?name="; // http://ip-server-mikhmon/mikhmonv2/status/status.php?name=
