--- a/logout.html
+++ b/logout.html
@@ -71,8 +71,7 @@
 </div>
 </center>
 <script type="text/javascript" >
-        var mydata = JSON.parse(data);
-        var title = document.getElementById('title').innerHTML = mydata[0].nama ;
+        var title = document.getElementById('title').innerHTML = nama ;
 </script>
 </body>
 </html>
