--- a/status.html
+++ b/status.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title id="title"></title>
+<link rel="icon" href="favicon.ico" />
 $(if refresh-timeout)
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
 <meta http-equiv="refresh" content="$(refresh-timeout-secs)">
@@ -101,9 +102,8 @@ $(endif)
     </div>
     </center>
     <script type="text/javascript" >
-        var mydata = JSON.parse(data);
-        document.getElementById('title').innerHTML =  mydata[0].nama ;
-        document.getElementById('cek').innerHTML =  mydata[5].masaaktif ;
+        document.getElementById('title').innerHTML =  nama ;
+        document.getElementById('cek').innerHTML =  masaaktif ;
         //document.getElementById('notifikasi').innerHTML =  mydata[7].notifikasi ;
         //get vaidity
         var usr = document.getElementById('user').innerHTML
